# rustls

./: Cargo.toml  generate_schemes.py
examples/internal/: bench.rs  bogo_shim.rs
rustls/: Cargo.toml
rustls-mio/: Cargo.toml  index.html
rustls-mio/examples/: client.rs  server.rs  tlsclient.rs  tlsserver.rs
rustls/src/: lib.rs  quic.rs  session.rs  sign.rs  suites.rs
rustls/src/client/: default_group.rs  hs.rs  mod.rs  tls13.rs
rustls/src/msgs/: handshake.rs
rustls/src/server/: hs.rs  mod.rs  tls12.rs  tls13.rs
src/: anchors.rs  cipher.rs  error.rs  key_schedule.rs  keylog.rs  lib.rs  prf.rs  quic.rs  rand.rs  session.rs  sign.rs  stream.rs  suites.rs  ticketer.rs  vecbuf.rs  verify.rs
src/client/: common.rs  default_group.rs  handy.rs  hs.rs  mod.rs
src/msgs/: base.rs  codec.rs  deframer.rs  enums.rs  handshake.rs  handshake_test.rs  hsjoiner.rs  macros.rs  message_test.rs  persist.rs  persist_test.rs
src/server/: common.rs  handy.rs  hs.rs  mod.rs
test-ca/dilithium/: ca.cert  ca.key  client-ca.cert  client.cert  client.fullchain  client.key  end.cert  end.chain  end.fullchain  end.key  inter.cert  inter.key
test-ca/kyber/: ca.cert  ca.key  client-ca.cert  client.cert  client.chain  client.fullchain  client.key  end.cert  end.fullchain  end.key  inter.cert  inter.key
tests/: api.rs
tests/common/: mod.rs
