[package]
name = "rustls"
version = "0.15.2"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls is a modern TLS library written in Rust."
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"
categories = ["network-programming", "cryptography"]

[dependencies]
base64 = "0.10"
log = { version = "0.4.0", optional = true }
ring = { path = "../ring" }
sct = "0.5.0"
untrusted = "0.6.2"
webpki = { path = "../webpki" }
lazy_static = {version = "1", optional = true}

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = []
quic = []
cached_keyshare = ["lazy_static"]

[dev-dependencies]
env_logger = "0.6.1"
log = "0.4.0"
tempfile = "3.0"
webpki-roots = "0.16.0"
criterion = "0.2"

[patch.crates-io]
webpki = { path = "../webpki" }
ring = { path = "../ring" }

[[example]]
name = "bogo_shim"
path = "examples/internal/bogo_shim.rs"
required-features = ["dangerous_configuration", "quic"]

[[example]]
name = "trytls_shim"
path = "examples/internal/trytls_shim.rs"

[[example]]
name = "bench"
path = "examples/internal/bench.rs"

[[bench]]
name = "benchmarks"
path = "tests/benchmarks.rs"
harness = false
